<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <TextView
    android:id="@+id/rateRequestTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:text="@string/rateTitle"
    android:textColor="@color/colorAccent"
    android:textSize="@dimen/RateDialogHeader_textSize" />

  <TextView
    android:id="@+id/rateRequest"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/rateRequestTitle"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="20dp"
    android:background="@color/appBackground"
    android:gravity="center_horizontal"
    android:text="@string/rateRequest"
    android:textColor="@color/applicationTextColor" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/rateApp"
    style="@style/DialogButtons"
    android:layout_below="@+id/rateRequest"
    android:text="@string/rateRateButton" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/rateAppLater"
    style="@style/DialogButtons"
    android:layout_below="@+id/rateApp"
    android:layout_marginTop="@dimen/RateDialogButton_marginTop"
    android:text="@string/rateLaterButton" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/rateNoThanksButton"
    style="@style/DialogButtons"
    android:layout_below="@+id/rateAppLater"
    android:layout_marginTop="@dimen/RateDialogButton_marginTop"
    android:layout_marginBottom="@dimen/RateDialogButton_marginTop"
    android:text="@string/rateNoThanksButton" />
</RelativeLayout>
