<?xml version="1.0" encoding="utf-8"?>

<!-- The attributes below configure the Android search box appearance
     and the search suggestions settings.
     See the Developer Guide for more information
     http://developer.android.com/guide/topics/search/
 -->
<searchable xmlns:android="http://schemas.android.com/apk/res/android"
  android:label="@string/app_name"
  android:hint="@string/search_hint"
  android:searchSettingsDescription="@string/settings_description"
  android:searchSuggestAuthority="com.crashtestdummylimited.navydecoderplus.DecodeProvider"
  android:searchSuggestIntentAction="android.intent.action.VIEW"
  android:searchSuggestIntentData="content://com.crashtestdummylimited.navydecoderplus.DecodeProvider/decodeData"
  android:searchSuggestSelection=" ?"
  android:searchSuggestThreshold="1"
  android:includeInGlobalSearch="false">
</searchable>
