<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/contentArea_padding">

    <TextView
      android:id="@+id/rfasTopLevelDescription"
      style="@style/MainDescription" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/rfasDecodeSpinner_paddingAboveSpinners"
      android:baselineAligned="false"
      android:orientation="horizontal">

      <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="@dimen/rfasDecodeSpinner_layoutMargin"
        android:hint="@string/rfasFirstCharacterPrompt"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
          android:id="@+id/rfasFirstCharacter"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="none" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="@dimen/rfasDecodeSpinner_layoutMargin"
        android:hint="@string/rfasSecondAndThirdCharactersPrompt"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
          android:id="@+id/rfasSecondAndThirdCharacter"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="none" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="@dimen/rfasDecodeSpinner_layoutMargin"
        android:hint="@string/rfasFourthCharactersPrompt"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
          android:id="@+id/rfasFourthCharacter"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="none" />
      </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
      style="@style/MainDecodeDescription"
      android:text="@string/decodeDescription" />

    <TextView
      android:id="@+id/rfasDecodeDescription"
      style="@style/ResultDescription" />

    <TextView
      style="@style/MainDecodeDescription"
      android:text="@string/sourceDescription" />

    <TextView
      android:id="@+id/rfasSourceDescription"
      style="@style/ResultDescription" />
  </LinearLayout>
</ScrollView>
