<?xml version="1.0" encoding="utf-8"?>

<!-- The attributes below configure the Android search box appearance
     and the search suggestions settings.
     See the Developer Guide for more information
     http://developer.android.com/guide/topics/search/
 -->

<!-- NOTE: path at the end of searchSuggestIntentData such as "enlistedratingcodes" should match the content of 
           android:searchSuggestPath
     See http://developer.android.com/guide/topics/search/searchable-config.html 
     
     android:searchSuggestPath - is used by android to determine the custom search suggestions
     android:searchSuggestIntentData - is used when 1) user selects an item, or the user press the search button on the search dialog
     
     And in either case, the code flow path goes to the Content Provider specified in android:searchSuggestAuthority, so the
     Uri (authority and path) should be the same in either case.     
-->

<searchable xmlns:android="http://schemas.android.com/apk/res/android"
  android:label="@string/app_name"
  android:hint="@string/hintRbscBilletCodes"
  android:searchSettingsDescription="@string/settings_description"
  android:searchSuggestAuthority="com.crashtestdummylimited.navydecoderplus.DecodeProvider"
  android:searchSuggestIntentAction="android.intent.action.VIEW"
  android:searchSuggestIntentData="content://com.crashtestdummylimited.navydecoderplus.DecodeProvider/decodeData/rbscbilletcodes"
  android:searchSuggestSelection=" ?"
  android:searchSuggestThreshold="1"
  android:includeInGlobalSearch="false"
  android:searchSuggestPath="rbscbilletcodes"
  android:voiceSearchMode="showVoiceSearchButton|launchRecognizer">
</searchable>
